# mock-claude

./: .gitignore
01-conversation-loop/: README.md  package-lock.json  package.json
01-conversation-loop/src/: anthropic.ts  index.ts  loop.ts  main.ts  mock.ts  types.ts
02-tool-system/: package-lock.json  package.json
02-tool-system/src/: anthropic.ts  executor.ts  index.ts  loop.ts  main.ts  mock.ts  permission.ts  types.ts
02-tool-system/src/tools/: registry.ts
02-tool-system/src/tools/built-in/: index.ts
03-context-management/: package-lock.json  package.json
03-context-management/src/: compact.ts  index.ts  loop.ts  main.ts  mock.ts  permission.ts  types.ts
03-context-management/src/tools/: registry.ts
04-memory-system/: package-lock.json  package.json
04-memory-system/src/: main.ts  memory.ts  mock.ts  types.ts
05-real-tools/: package-lock.json  package.json
05-real-tools/src/: executor.ts  index.ts  loop.ts  main.ts  mock.ts  token.ts  types.ts
05-real-tools/src/tools/built-in/: index.ts
06-rust-rewrite/: .env.example  Cargo.toml  README.md
06-rust-rewrite/src/: anthropic.rs  lib.rs  loop_.rs  main.rs  mock.rs  model.rs  permission.rs  types.rs
06-rust-rewrite/src/tools/: glob.rs  grep.rs  mod.rs  read.rs  write.rs
06-rust-rewrite/tests/: integration.rs
